--- a/nav.html
+++ b/nav.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Navigation</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700"/>
-	<link rel="stylesheet" type="text/css" href="nav.css" />
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-	<script src="nav.js"></script>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Navigation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" />
+  <link rel="stylesheet" type="text/css" href="nav.css" />
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+  <script src="nav.js"></script>
 </head>
 <body>
-	<div class="nav__wrapper" role="navigation" aria-label="Main menu">
+  <div class="nav__wrapper" role="navigation" aria-label="Main menu">
     <div class="nav">
       <div class="nav__title">
         <div class="nav__name-wrapper">
@@ -28,113 +28,119 @@
         <span class="nav-menu--mob nav-menu--mid"></span>
         <span class="nav-menu--mob nav-menu--bottom"></span>
       </div>
-			<nav class="nav-menu" aria-label="Main Navigation">
-				<ul class="nav-menu-list">
-					<li class="nav-menu__item has-submenu nav--credit">
-						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Credit Cards section" >Credit Cards</a>
-						<button title="Open menu" aria-expanded="false" class="nav-arrow">
-							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
-						</button>
-						<ul class="nav-submenu-list">
-							<li class="nav-submenu__item">
-								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="#">Best Sign-Up Bonus Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-travel-rewards-credit-cards/">Best Travel Credit Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-zero-interest-cards/">Best 0% Interest Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-rewards-credit-cards/">Best Rewards Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-
-								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-no-annual-fee-cards/">Best No Annual Fee Cards</a>
-							</li>
-						</ul>
-					</li>
-					<li class="nav-menu__item has-submenu nav--banking">
-						<a href="/the-ascent/banks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Banking section">Banking</a>
-						<button title="Open menu" aria-expanded="false" class="nav-arrow">
-							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
-						</button>
-						<ul class="nav-submenu-list">
-								<li class="nav-submenu__item">
-										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a>
-							</li>
-							<li class="nav-submenu__item">
-								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/checking-accounts/">Best Checking Accounts</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/money-market/">Best Money Market Accounts</a>
-							</li>
-						</ul>
-					</li>
-					<li class="nav-menu__item has-submenu nav--brokerages ">
-						<a href="/the-ascent/buying-stocks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Brokerage section">Brokerage</a>
-						<button title="Open menu" aria-expanded="false" class="nav-arrow">
-							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
-						</button>
-						<ul class="nav-submenu-list">
-							<li class="nav-submenu__item">
-								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-options/">Best Options Brokers</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-iras/">Best Brokers IRAs</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="#">Best Robo Advisors</a>
-							</li>
-						</ul>
-					</li>
-					<li class="nav-menu__item nav--loans">
-						<a href="/the-ascent/personal-loans/" class="nav-menu__link" aria-haspopup="false" aria-expanded="false" aria-label="Loans section">Loans</a>
-					</li>
-					<li class="nav-menu__item has-submenu nav--blog" aria-haspopup="true" aria-expanded="false">
-						<a href="/the-ascent/blog/" class="nav-menu__link">Blog</a>
-						<button title="Open menu" aria-expanded="false" class="nav-arrow">
-							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
-						</button>
-						<ul class="nav-submenu-list">
-							<li class="nav-submenu__item">
-										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/blog/" aria-label="Credit Cars blog articles" >Credit Cards</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/blog/" aria-label="Banking blog articles" >Banking</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/blog/" aria-label="Brokerage blog articles" >Brokerage</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/personal-loans/blog/" aria-label="Loans blog articles" >Loans</a>
-							</li>
-							<li class="nav-submenu__item">
-									<a class="nav-menu__link" href="#">Best Robo Advisors</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</nav>
-
+      <nav class="nav-menu" aria-label="Main Navigation">
+        <ul class="nav-menu-list">
+          <li class="nav-menu__item has-submenu nav--credit">
+            <a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Credit Cards section">Credit Cards</a>
+            <button title="Open menu" aria-expanded="false" class="nav-arrow">
+              <svg fill="#474747" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z" />
+              </svg>
+            </button>
+            <ul class="nav-submenu-list">
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="#">Best Sign-Up Bonus Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-travel-rewards-credit-cards/">Best Travel Credit Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-zero-interest-cards/">Best 0% Interest Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-rewards-credit-cards/">Best Rewards Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/best-no-annual-fee-cards/">Best No Annual Fee Cards</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-menu__item has-submenu nav--banking">
+            <a href="/the-ascent/banks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Banking section">Banking</a>
+            <button title="Open menu" aria-expanded="false" class="nav-arrow">
+              <svg fill="#474747" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z" />
+              </svg>
+            </button>
+            <ul class="nav-submenu-list">
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/checking-accounts/">Best Checking Accounts</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/money-market/">Best Money Market Accounts</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-menu__item has-submenu nav--brokerages ">
+            <a href="/the-ascent/buying-stocks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Brokerage section">Brokerage</a>
+            <button title="Open menu" aria-expanded="false" class="nav-arrow">
+              <svg fill="#474747" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z" />
+              </svg>
+            </button>
+            <ul class="nav-submenu-list">
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-options/">Best Options Brokers</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-iras/">Best Brokers IRAs</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="#">Best Robo Advisors</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-menu__item nav--loans">
+            <a href="/the-ascent/personal-loans/" class="nav-menu__link" aria-haspopup="false" aria-expanded="false" aria-label="Loans section">Loans</a>
+          </li>
+          <li class="nav-menu__item has-submenu nav--blog" aria-haspopup="true" aria-expanded="false">
+            <a href="/the-ascent/blog/" class="nav-menu__link">Blog</a>
+            <button title="Open menu" aria-expanded="false" class="nav-arrow">
+              <svg fill="#474747" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z" />
+              </svg>
+            </button>
+            <ul class="nav-submenu-list">
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/blog/" aria-label="Credit Cars blog articles">Credit Cards</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/blog/" aria-label="Banking blog articles">Banking</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/blog/" aria-label="Brokerage blog articles">Brokerage</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="https://www.fool.com/the-ascent/personal-loans/blog/" aria-label="Loans blog articles">Loans</a>
+              </li>
+              <li class="nav-submenu__item">
+                <a class="nav-menu__link" href="#">Best Robo Advisors</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>
 </body>
